WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139026
[Curl] Compile error in ResourceHandleManager.cpp.
https://bugs.webkit.org/show_bug.cgi?id=139026
Summary
[Curl] Compile error in ResourceHandleManager.cpp.
peavo
Reported
2014-11-24 06:37:49 PST
The parameter types in the constructor of the Timer class has changed.
Attachments
Patch
(2.34 KB, patch)
2014-11-24 06:41 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-11-24 06:41:15 PST
Created
attachment 242156
[details]
Patch
Brent Fulgham
Comment 2
2014-11-24 08:24:17 PST
Comment on
attachment 242156
[details]
Patch Thank you for fixing this!
WebKit Commit Bot
Comment 3
2014-11-24 09:02:15 PST
Comment on
attachment 242156
[details]
Patch Clearing flags on attachment: 242156 Committed
r176520
: <
http://trac.webkit.org/changeset/176520
>
WebKit Commit Bot
Comment 4
2014-11-24 09:02:26 PST
All reviewed patches have been landed. Closing bug.
peavo
Comment 5
2014-11-24 10:30:05 PST
(In reply to
comment #2
)
> Comment on
attachment 242156
[details]
> Patch > > Thank you for fixing this!
Thanks for reviewing :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug