[Curl] Compile error in ResourceHandleManager.cpp. https://bugs.webkit.org/show_bug.cgi?id=139026

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-11-24
Reviewed by Brent Fulgham.

The parameter types of the constructor of the Timer class has changed.

* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::ResourceHandleManager::ResourceHandleManager):
(WebCore::ResourceHandleManager::downloadTimerCallback):
* platform/network/curl/ResourceHandleManager.h:

Canonical link: https://commits.webkit.org/156899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176520 268f45cc-cd09-0410-ab3c-d52691b4dbfc